compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__bools__assigning.snap
---
source: compiler-core/src/nix/tests/bools.rs
expression: "\nfn go(x, y) {\n  let assert True = x\n  let assert False = x\n  let assert Nil = y\n}\n"
---
let
  go =
    x: y:
      let
        _assert' =
          if !x then builtins.throw "Assignment pattern did not match" else null;
        _''0 = builtins.seq _assert' x;
        _assert''1 =
          if x then builtins.throw "Assignment pattern did not match" else null;
        _''1 = builtins.seq _assert''1 x;
      in
        if y != null
        then builtins.throw "Assignment pattern did not match"
        else y;
in {}
