compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__bools__binop_panic_left.snap
---
source: compiler-core/src/nix/tests/bools.rs
expression: "pub fn negate(x) {\n    panic && x\n}"
---
let
  negate = x: (builtins.throw "panic expression evaluated") && x;
in { inherit negate; }
