compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__bools__binop_todo_right.snap
---
source: compiler-core/src/nix/tests/bools.rs
expression: "pub fn negate(x) {\n    x && todo\n}"
---
let
  inherit (builtins.import ./../gleam.nix) makeError;
  
  negate =
    x:
      x && (builtins.throw
        (makeError
          "todo"
          "my/mod"
          2
          "negate"
          "This has not yet been implemented"
          {}));
in { inherit negate; }
