compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__bools__constants.snap
---
source: compiler-core/src/nix/tests/bools.rs
expression: "\nconst a = True\nconst b = False\nconst c = Nil\n"
---
let a = true; b = false; c = null; in {}
