compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__bools__expressions.snap
---
source: compiler-core/src/nix/tests/bools.rs
expression: "\nfn go() {\n    True\n    False\n    Nil\n}\n"
---
let go = let _''0 = true; _''1 = false; in null; in {}
