compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__bools__negate_todo.snap
---
source: compiler-core/src/nix/tests/bools.rs
expression: "pub fn negate(x) {\n  !todo\n}"
---
let
  negate = x: !(builtins.throw "This has not yet been implemented");
in { inherit negate; }
