compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__bools__negation_block.snap
---
source: compiler-core/src/nix/tests/bools.rs
expression: "pub fn negate(x) {\n  !{\n    123\n    x\n  }\n}"
---
let negate = x: !(let _''0 = 123; in x); in { inherit negate; }
